show most likely detection probability

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<div>
 		<h1>Autopilot <span id="is-autopiloting"></span></h1>
 		<p>Latency: <span id="vision-latency"></span></p>
+		<p>Most probable: <span id="most-probable"></span></p>
 		<p>
 			<button id="start-autopilot">Start</button>
 			<button id="stop-autopilot">Stop</button>
